[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "landscape-characterization"
version = "2.3.1"
description = "Internal tools for landscape characterization"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "scikit-learn",
    "tqdm",
    "gudhi",
    "qiskit",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]