[build-system]
requires = ["setuptools>=80.0", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "landscape-tools"
description = "Internal tools for landscape characterization"
requires-python = ">=3.9"
dynamic = ["dependencies", "readme", "version"]

[project.urls]
Homepage = "https://github.com/ColibrITD-SAS/landscape_tools"
Documentation = "https://landscape-tools.colibri-quantum.com"
Issues = "https://github.com/ColibrITD-SAS/landscape_tools/issues"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
readme = { file = ["README.md"] }

[tool.setuptools.packages.find]
include = ["landscape_tools*"]
